Project

General

Profile

Actions

Bug #49650

closed

per bucket notification object is never deleted

Added by Yuval Lifshitz about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Support
Tags:
notification
Backport:
pacific, octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

to reproduce:
  • create a topic:
    aws --endpoint-url http://localhost:8000 sns create-topic --name=mytopic  --attributes='{"push-endpoint": "amqp://localhost", "amqp-ack-level": "broker",  "persistent": "true", "amqp-exchange": "topic_logs"}'
    
  • create a bucket
    aws --endpoint-url http://localhost:8000 s3 mb s3://bobo
    
  • create 2 notifications on that bucket:
    aws --region=default --endpoint-url http://localhost:8000 s3api put-bucket-notification-configuration --bucket bobo --notification-configuration='{"TopicConfigurations": [{"Id": "bobo_notif1", "TopicArn": "arn:aws:sns:default::mytopic", "Events": []}]}'
    aws --region=default --endpoint-url http://localhost:8000 s3api put-bucket-notification-configuration --bucket bobo --notification-configuration='{"TopicConfigurations": [{"Id": "bobo_notif2", "TopicArn": "arn:aws:sns:default::mytopic", "Events": []}]}'
    
  • check which system object were created:
    bin/rados -p default.rgw.log ls | grep pubsub
    
  • make sure that the notifications are created:
    aws --region=default --endpoint-url http://localhost:8000 s3api get-bucket-notification-configuration --bucket bobo
    
  • delete the notifications from the bucket:
    aws --region=default --endpoint-url http://localhost:8000 s3api delete-bucket-notification-configuration --bucket bobo
    
  • verify that the notifications are deleted:
    aws --region=default --endpoint-url http://localhost:8000 s3api get-bucket-notification-configuration --bucket bobo
    
  • check for system objects again. we expect to see only "pubsub.", however we see:
    pubsub.
    pubsub..bucket.bobo/0b7b316e-a5e6-4bfd-aa6d-258ddf8fe2c3.4137.1
    
  • removing the bucket did not delete the object either

when there are many buckets with notifications the fact that these objects are not deleted can create an issue


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #50464: octopus: per bucket notification object is never deletedResolvedCory SnyderActions
Copied to rgw - Backport #50465: pacific: per bucket notification object is never deletedResolvedCory SnyderActions
Actions #1

Updated by Yuval Lifshitz about 3 years ago

removing the bucket actually did delete all the notifications

Actions #2

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 39944
Actions #3

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50464: octopus: per bucket notification object is never deleted added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50465: pacific: per bucket notification object is never deleted added
Actions #6

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF