rgw/notifications: delete bucket notification object when empty

Fixes: https://tracker.ceph.com/issues/49650

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit 08e9846fd5a040887e2ddbfca36da97777fc76f6)

 Conflicts:
	src/rgw/rgw_pubsub.cc
 - octopus does not have optional_yield arg